--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test-login": "mocha login",
+    "test-assignment": "mocha assignment",
+    "test-courses": "mocha courses",
+    "test-calendar": "mocha calendar"
   },
   "dependencies": {
     "assert": "^2.1.0",
